--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="padding_large">20dp</dimen>
     <dimen name="padding_extra_large">32dp</dimen>
     <dimen name="padding_note_details">128dp</dimen>
+
+    <dimen name="search_bar_corners">24dp</dimen>
 </resources>
