--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="padding_note_details">128dp</dimen>
 
     <dimen name="search_bar_corners">24dp</dimen>
+
+    <dimen name="item_height">164dp</dimen>
 </resources>
